--- a/config/config.ini
+++ b/config/config.ini
@@ -7,3 +7,12 @@ redis.db			=	3					# redis选择服务器
 token.saveRedis 	=	true				# 登陆凭证保存redis
 token.saveSecond	=	7200				# token保存时间 单位：秒
 token.saveKey 		=	webServer			# token保存redis key
+
+# swagger文档生成相关
+swagger.Title		=	webServer			
+swagger.Description	=	简单服务,集结各种常用工具
+swagger.Version		=	1.0.0
+swagger.TermsOfService	=	https://github.com/soekchl/webServer
+swagger.Contact.Name	=	Luke
+swagger.Contact.URL		=	https://www.utcgame.com
+swagger.Contact.EMail	=	soekchl@163.com
