edit config.go 读取配置后去掉特殊字符

--- a/config/config.ini
+++ b/config/config.ini
@@ -9,10 +9,15 @@ token.saveSecond	=	7200				# token保存时间 单位：秒
 token.saveKey 		=	webServer			# token保存redis key
 
 # swagger文档生成相关
-swagger.Title		=	webServer			
+swagger.Title		=	webServer
 swagger.Description	=	简单服务,集结各种常用工具
+swagger.Host		=	localhost:8080
+swagger.Schemes		=	http,https
+swagger.Consumes	=	#application/json
+swagger.Produces	=	#application/json
 swagger.Version		=	1.0.0
 swagger.TermsOfService	=	https://github.com/soekchl/webServer
 swagger.Contact.Name	=	Luke
 swagger.Contact.URL		=	https://www.utcgame.com
 swagger.Contact.EMail	=	soekchl@163.com
+
