--- a/config/config.ini
+++ b/config/config.ini
@@ -1,4 +1,6 @@
 server.port			=	8080				# 服务器监听端口
+swaggerOutFilePath	=	./swagger.json		# swagger文档生成路径
+markdownOutFilePath	=						# markdown文档生成路径
 
 redis.server		=	localhost:6379		# redis服务
 redis.auth			=						# redis密码
