add mysql model demo

--- a/config/config.ini
+++ b/config/config.ini
@@ -23,3 +23,9 @@ swagger.Contact.Name	=	Luke
 swagger.Contact.URL		=	https://www.utcgame.com
 swagger.Contact.EMail	=	soekchl@163.com
 
+mysql.db			=	127.0.0.1
+mysql.user			=	root
+mysql.password		=	admin
+mysql.port			=	3306
+mysql.name			=	test
+mysql.timezone		=	Asia/Shanghai
