--- a/config/config.ini
+++ b/config/config.ini
@@ -23,7 +23,7 @@ swagger.Contact.Name	=	Luke
 swagger.Contact.URL		=	https://www.utcgame.com
 swagger.Contact.EMail	=	soekchl@163.com
 
-mysql.db			=	127.0.0.1
+mysql.host			=	localhost
 mysql.user			=	root
 mysql.password		=	admin
 mysql.port			=	3306
